bison.output
Terminals unused in grammar

   '+'
   '-'
   '/'
   ORDER
   BY
   ASC
   DESC
   INDEX
   SHOW
   TABLES


Grammar

    0 $accept: sql_start $end

    1 sql_start: sql_func
    2          | EXIT

    3 sql_func: ';'
    4         | table_def
    5         | table_drop
    6         | insert_stat
    7         | delete_stat
    8         | select_stat

    9 table_def: CREATE TABLE table '(' table_attr_list ')' ';'

   10 table: NAME

   11 table_attr_list: column_def
   12                | table_attr_list ',' column_def

   13 column_def: column data_type

   14 column: NAME

   15 data_type: CHARACTER '(' NUMBER ')'
   16          | VARCHAR '(' NUMBER ')'
   17          | INTEGER
   18          | DATE

   19 table_drop: DROP TABLE table ';'

   20 insert_stat: INSERT INTO table VALUES '(' insert_list ')' ';'

   21 insert_list: NUMBER
   22            | STRING
   23            | insert_list ',' NUMBER
   24            | insert_list ',' STRING

   25 delete_stat: DELETE FROM table where_clause ';'

   26 select_stat: select_seg ';'

   27 select_seg: select_clause FROM fromlist where_clause

   28 select_clause: selectbegin unique sellist
   29              | selectbegin unique '*'

   30 selectbegin: SELECT

   31 unique: %empty
   32       | ALL
   33       | DISTINCT
   34       | UNIQUE

   35 sellist: sel_column
   36        | sellist ',' sel_column

   37 sel_column: NAME
   38           | NAME '.' NAME

   39 fromlist: sel_table
   40         | fromlist ',' sel_table

   41 sel_table: NAME
   42          | '(' select_seg ')'
   43          | '(' select_seg ')' NAME

   44 where_clause: %empty
   45             | WHERE condition

   46 condition: expr
   47          | condition AND expr

   48 expr: NAME '.' NAME COMPARISION NAME '.' NAME
   49     | NAME COMPARISION NUMBER
   50     | NAME COMPARISION STRING
   51     | NAME '.' NAME COMPARISION NUMBER
   52     | NAME '.' NAME COMPARISION STRING


Terminals, with rules where they appear

$end (0) 0
'(' (40) 9 15 16 20 42 43
')' (41) 9 15 16 20 42 43
'*' (42) 29
'+' (43)
',' (44) 12 23 24 36 40
'-' (45)
'.' (46) 38 48 51 52
'/' (47)
';' (59) 3 9 19 20 25 26
error (256)
NAME (258) 10 14 37 38 41 43 48 49 50 51 52
STRING (259) 22 24 50 52
NUMBER (260) 15 16 21 23 49 51
COMPARISION (261) 48 49 50 51 52
AND (262) 47
SELECT (263) 30
FROM (264) 25 27
WHERE (265) 45
ORDER (266)
BY (267)
ASC (268)
DESC (269)
ALL (270) 32
UNIQUE (271) 34
DISTINCT (272) 33
CREATE (273) 9
TABLE (274) 9 19
DROP (275) 19
INDEX (276)
INSERT (277) 20
INTO (278) 20
VALUES (279) 20
DELETE (280) 25
CHARACTER (281) 15
VARCHAR (282) 16
INTEGER (283) 17
DATE (284) 18
SHOW (285)
TABLES (286)
EXIT (287) 2


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
sql_start (43)
    on left: 1 2, on right: 0
sql_func (44)
    on left: 3 4 5 6 7 8, on right: 1
table_def (45)
    on left: 9, on right: 4
table (46)
    on left: 10, on right: 9 19 20 25
table_attr_list (47)
    on left: 11 12, on right: 9 12
column_def (48)
    on left: 13, on right: 11 12
column (49)
    on left: 14, on right: 13
data_type (50)
    on left: 15 16 17 18, on right: 13
table_drop (51)
    on left: 19, on right: 5
insert_stat (52)
    on left: 20, on right: 6
insert_list (53)
    on left: 21 22 23 24, on right: 20 23 24
delete_stat (54)
    on left: 25, on right: 7
select_stat (55)
    on left: 26, on right: 8
select_seg (56)
    on left: 27, on right: 26 42 43
select_clause (57)
    on left: 28 29, on right: 27
selectbegin (58)
    on left: 30, on right: 28 29
unique (59)
    on left: 31 32 33 34, on right: 28 29
sellist (60)
    on left: 35 36, on right: 28 36
sel_column (61)
    on left: 37 38, on right: 35 36
fromlist (62)
    on left: 39 40, on right: 27 40
sel_table (63)
    on left: 41 42 43, on right: 39 40
where_clause (64)
    on left: 44 45, on right: 25 27
condition (65)
    on left: 46 47, on right: 45 47
expr (66)
    on left: 48 49 50 51 52, on right: 46 47


State 0

    0 $accept: . sql_start $end

    SELECT  shift, and go to state 1
    CREATE  shift, and go to state 2
    DROP    shift, and go to state 3
    INSERT  shift, and go to state 4
    DELETE  shift, and go to state 5
    EXIT    shift, and go to state 6
    ';'     shift, and go to state 7

    sql_start      go to state 8
    sql_func       go to state 9
    table_def      go to state 10
    table_drop     go to state 11
    insert_stat    go to state 12
    delete_stat    go to state 13
    select_stat    go to state 14
    select_seg     go to state 15
    select_clause  go to state 16
    selectbegin    go to state 17


State 1

   30 selectbegin: SELECT .

    $default  reduce using rule 30 (selectbegin)


State 2

    9 table_def: CREATE . TABLE table '(' table_attr_list ')' ';'

    TABLE  shift, and go to state 18


State 3

   19 table_drop: DROP . TABLE table ';'

    TABLE  shift, and go to state 19


State 4

   20 insert_stat: INSERT . INTO table VALUES '(' insert_list ')' ';'

    INTO  shift, and go to state 20


State 5

   25 delete_stat: DELETE . FROM table where_clause ';'

    FROM  shift, and go to state 21


State 6

    2 sql_start: EXIT .

    $default  reduce using rule 2 (sql_start)


State 7

    3 sql_func: ';' .

    $default  reduce using rule 3 (sql_func)


State 8

    0 $accept: sql_start . $end

    $end  shift, and go to state 22


State 9

    1 sql_start: sql_func .

    $default  reduce using rule 1 (sql_start)


State 10

    4 sql_func: table_def .

    $default  reduce using rule 4 (sql_func)


State 11

    5 sql_func: table_drop .

    $default  reduce using rule 5 (sql_func)


State 12

    6 sql_func: insert_stat .

    $default  reduce using rule 6 (sql_func)


State 13

    7 sql_func: delete_stat .

    $default  reduce using rule 7 (sql_func)


State 14

    8 sql_func: select_stat .

    $default  reduce using rule 8 (sql_func)


State 15

   26 select_stat: select_seg . ';'

    ';'  shift, and go to state 23


State 16

   27 select_seg: select_clause . FROM fromlist where_clause

    FROM  shift, and go to state 24


State 17

   28 select_clause: selectbegin . unique sellist
   29              | selectbegin . unique '*'

    ALL       shift, and go to state 25
    UNIQUE    shift, and go to state 26
    DISTINCT  shift, and go to state 27

    $default  reduce using rule 31 (unique)

    unique  go to state 28


State 18

    9 table_def: CREATE TABLE . table '(' table_attr_list ')' ';'

    NAME  shift, and go to state 29

    table  go to state 30


State 19

   19 table_drop: DROP TABLE . table ';'

    NAME  shift, and go to state 29

    table  go to state 31


State 20

   20 insert_stat: INSERT INTO . table VALUES '(' insert_list ')' ';'

    NAME  shift, and go to state 29

    table  go to state 32


State 21

   25 delete_stat: DELETE FROM . table where_clause ';'

    NAME  shift, and go to state 29

    table  go to state 33


State 22

    0 $accept: sql_start $end .

    $default  accept


State 23

   26 select_stat: select_seg ';' .

    $default  reduce using rule 26 (select_stat)


State 24

   27 select_seg: select_clause FROM . fromlist where_clause

    NAME  shift, and go to state 34
    '('   shift, and go to state 35

    fromlist   go to state 36
    sel_table  go to state 37


State 25

   32 unique: ALL .

    $default  reduce using rule 32 (unique)


State 26

   34 unique: UNIQUE .

    $default  reduce using rule 34 (unique)


State 27

   33 unique: DISTINCT .

    $default  reduce using rule 33 (unique)


State 28

   28 select_clause: selectbegin unique . sellist
   29              | selectbegin unique . '*'

    NAME  shift, and go to state 38
    '*'   shift, and go to state 39

    sellist     go to state 40
    sel_column  go to state 41


State 29

   10 table: NAME .

    $default  reduce using rule 10 (table)


State 30

    9 table_def: CREATE TABLE table . '(' table_attr_list ')' ';'

    '('  shift, and go to state 42


State 31

   19 table_drop: DROP TABLE table . ';'

    ';'  shift, and go to state 43


State 32

   20 insert_stat: INSERT INTO table . VALUES '(' insert_list ')' ';'

    VALUES  shift, and go to state 44


State 33

   25 delete_stat: DELETE FROM table . where_clause ';'

    WHERE  shift, and go to state 45

    $default  reduce using rule 44 (where_clause)

    where_clause  go to state 46


State 34

   41 sel_table: NAME .

    $default  reduce using rule 41 (sel_table)


State 35

   42 sel_table: '(' . select_seg ')'
   43          | '(' . select_seg ')' NAME

    SELECT  shift, and go to state 1

    select_seg     go to state 47
    select_clause  go to state 16
    selectbegin    go to state 17


State 36

   27 select_seg: select_clause FROM fromlist . where_clause
   40 fromlist: fromlist . ',' sel_table

    WHERE  shift, and go to state 45
    ','    shift, and go to state 48

    $default  reduce using rule 44 (where_clause)

    where_clause  go to state 49


State 37

   39 fromlist: sel_table .

    $default  reduce using rule 39 (fromlist)


State 38

   37 sel_column: NAME .
   38           | NAME . '.' NAME

    '.'  shift, and go to state 50

    $default  reduce using rule 37 (sel_column)


State 39

   29 select_clause: selectbegin unique '*' .

    $default  reduce using rule 29 (select_clause)


State 40

   28 select_clause: selectbegin unique sellist .
   36 sellist: sellist . ',' sel_column

    ','  shift, and go to state 51

    $default  reduce using rule 28 (select_clause)


State 41

   35 sellist: sel_column .

    $default  reduce using rule 35 (sellist)


State 42

    9 table_def: CREATE TABLE table '(' . table_attr_list ')' ';'

    NAME  shift, and go to state 52

    table_attr_list  go to state 53
    column_def       go to state 54
    column           go to state 55


State 43

   19 table_drop: DROP TABLE table ';' .

    $default  reduce using rule 19 (table_drop)


State 44

   20 insert_stat: INSERT INTO table VALUES . '(' insert_list ')' ';'

    '('  shift, and go to state 56


State 45

   45 where_clause: WHERE . condition

    NAME  shift, and go to state 57

    condition  go to state 58
    expr       go to state 59


State 46

   25 delete_stat: DELETE FROM table where_clause . ';'

    ';'  shift, and go to state 60


State 47

   42 sel_table: '(' select_seg . ')'
   43          | '(' select_seg . ')' NAME

    ')'  shift, and go to state 61


State 48

   40 fromlist: fromlist ',' . sel_table

    NAME  shift, and go to state 34
    '('   shift, and go to state 35

    sel_table  go to state 62


State 49

   27 select_seg: select_clause FROM fromlist where_clause .

    $default  reduce using rule 27 (select_seg)


State 50

   38 sel_column: NAME '.' . NAME

    NAME  shift, and go to state 63


State 51

   36 sellist: sellist ',' . sel_column

    NAME  shift, and go to state 38

    sel_column  go to state 64


State 52

   14 column: NAME .

    $default  reduce using rule 14 (column)


State 53

    9 table_def: CREATE TABLE table '(' table_attr_list . ')' ';'
   12 table_attr_list: table_attr_list . ',' column_def

    ')'  shift, and go to state 65
    ','  shift, and go to state 66


State 54

   11 table_attr_list: column_def .

    $default  reduce using rule 11 (table_attr_list)


State 55

   13 column_def: column . data_type

    CHARACTER  shift, and go to state 67
    VARCHAR    shift, and go to state 68
    INTEGER    shift, and go to state 69
    DATE       shift, and go to state 70

    data_type  go to state 71


State 56

   20 insert_stat: INSERT INTO table VALUES '(' . insert_list ')' ';'

    STRING  shift, and go to state 72
    NUMBER  shift, and go to state 73

    insert_list  go to state 74


State 57

   48 expr: NAME . '.' NAME COMPARISION NAME '.' NAME
   49     | NAME . COMPARISION NUMBER
   50     | NAME . COMPARISION STRING
   51     | NAME . '.' NAME COMPARISION NUMBER
   52     | NAME . '.' NAME COMPARISION STRING

    COMPARISION  shift, and go to state 75
    '.'          shift, and go to state 76


State 58

   45 where_clause: WHERE condition .
   47 condition: condition . AND expr

    AND  shift, and go to state 77

    $default  reduce using rule 45 (where_clause)


State 59

   46 condition: expr .

    $default  reduce using rule 46 (condition)


State 60

   25 delete_stat: DELETE FROM table where_clause ';' .

    $default  reduce using rule 25 (delete_stat)


State 61

   42 sel_table: '(' select_seg ')' .
   43          | '(' select_seg ')' . NAME

    NAME  shift, and go to state 78

    $default  reduce using rule 42 (sel_table)


State 62

   40 fromlist: fromlist ',' sel_table .

    $default  reduce using rule 40 (fromlist)


State 63

   38 sel_column: NAME '.' NAME .

    $default  reduce using rule 38 (sel_column)


State 64

   36 sellist: sellist ',' sel_column .

    $default  reduce using rule 36 (sellist)


State 65

    9 table_def: CREATE TABLE table '(' table_attr_list ')' . ';'

    ';'  shift, and go to state 79


State 66

   12 table_attr_list: table_attr_list ',' . column_def

    NAME  shift, and go to state 52

    column_def  go to state 80
    column      go to state 55


State 67

   15 data_type: CHARACTER . '(' NUMBER ')'

    '('  shift, and go to state 81


State 68

   16 data_type: VARCHAR . '(' NUMBER ')'

    '('  shift, and go to state 82


State 69

   17 data_type: INTEGER .

    $default  reduce using rule 17 (data_type)


State 70

   18 data_type: DATE .

    $default  reduce using rule 18 (data_type)


State 71

   13 column_def: column data_type .

    $default  reduce using rule 13 (column_def)


State 72

   22 insert_list: STRING .

    $default  reduce using rule 22 (insert_list)


State 73

   21 insert_list: NUMBER .

    $default  reduce using rule 21 (insert_list)


State 74

   20 insert_stat: INSERT INTO table VALUES '(' insert_list . ')' ';'
   23 insert_list: insert_list . ',' NUMBER
   24            | insert_list . ',' STRING

    ')'  shift, and go to state 83
    ','  shift, and go to state 84


State 75

   49 expr: NAME COMPARISION . NUMBER
   50     | NAME COMPARISION . STRING

    STRING  shift, and go to state 85
    NUMBER  shift, and go to state 86


State 76

   48 expr: NAME '.' . NAME COMPARISION NAME '.' NAME
   51     | NAME '.' . NAME COMPARISION NUMBER
   52     | NAME '.' . NAME COMPARISION STRING

    NAME  shift, and go to state 87


State 77

   47 condition: condition AND . expr

    NAME  shift, and go to state 57

    expr  go to state 88


State 78

   43 sel_table: '(' select_seg ')' NAME .

    $default  reduce using rule 43 (sel_table)


State 79

    9 table_def: CREATE TABLE table '(' table_attr_list ')' ';' .

    $default  reduce using rule 9 (table_def)


State 80

   12 table_attr_list: table_attr_list ',' column_def .

    $default  reduce using rule 12 (table_attr_list)


State 81

   15 data_type: CHARACTER '(' . NUMBER ')'

    NUMBER  shift, and go to state 89


State 82

   16 data_type: VARCHAR '(' . NUMBER ')'

    NUMBER  shift, and go to state 90


State 83

   20 insert_stat: INSERT INTO table VALUES '(' insert_list ')' . ';'

    ';'  shift, and go to state 91


State 84

   23 insert_list: insert_list ',' . NUMBER
   24            | insert_list ',' . STRING

    STRING  shift, and go to state 92
    NUMBER  shift, and go to state 93


State 85

   50 expr: NAME COMPARISION STRING .

    $default  reduce using rule 50 (expr)


State 86

   49 expr: NAME COMPARISION NUMBER .

    $default  reduce using rule 49 (expr)


State 87

   48 expr: NAME '.' NAME . COMPARISION NAME '.' NAME
   51     | NAME '.' NAME . COMPARISION NUMBER
   52     | NAME '.' NAME . COMPARISION STRING

    COMPARISION  shift, and go to state 94


State 88

   47 condition: condition AND expr .

    $default  reduce using rule 47 (condition)


State 89

   15 data_type: CHARACTER '(' NUMBER . ')'

    ')'  shift, and go to state 95


State 90

   16 data_type: VARCHAR '(' NUMBER . ')'

    ')'  shift, and go to state 96


State 91

   20 insert_stat: INSERT INTO table VALUES '(' insert_list ')' ';' .

    $default  reduce using rule 20 (insert_stat)


State 92

   24 insert_list: insert_list ',' STRING .

    $default  reduce using rule 24 (insert_list)


State 93

   23 insert_list: insert_list ',' NUMBER .

    $default  reduce using rule 23 (insert_list)


State 94

   48 expr: NAME '.' NAME COMPARISION . NAME '.' NAME
   51     | NAME '.' NAME COMPARISION . NUMBER
   52     | NAME '.' NAME COMPARISION . STRING

    NAME    shift, and go to state 97
    STRING  shift, and go to state 98
    NUMBER  shift, and go to state 99


State 95

   15 data_type: CHARACTER '(' NUMBER ')' .

    $default  reduce using rule 15 (data_type)


State 96

   16 data_type: VARCHAR '(' NUMBER ')' .

    $default  reduce using rule 16 (data_type)


State 97

   48 expr: NAME '.' NAME COMPARISION NAME . '.' NAME

    '.'  shift, and go to state 100


State 98

   52 expr: NAME '.' NAME COMPARISION STRING .

    $default  reduce using rule 52 (expr)


State 99

   51 expr: NAME '.' NAME COMPARISION NUMBER .

    $default  reduce using rule 51 (expr)


State 100

   48 expr: NAME '.' NAME COMPARISION NAME '.' . NAME

    NAME  shift, and go to state 101


State 101

   48 expr: NAME '.' NAME COMPARISION NAME '.' NAME .

    $default  reduce using rule 48 (expr)
